readable_test/typer/failing/TestVar2.grading.amy
object TestVar2 
var i : Int(32) = 1;
i = true
end TestVar2